<resources>
    <string name="app_name">FarmAide</string>
    <string name="app_subname">Philippine Ration Optimizer</string>
    <!--<string name="app_subname">Farm Inventory and Farm Animal Feed Ration Optimizer</string>-->
    <string name="login_as">Log in as:</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="loginBtn">Login</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="supplier">Supplier</string>
    <string name="signup">Sign Up</string>
    <string name="opti_label">Optimizer</string>
    <string name="inventory_label">Inventory</string>
    <string name="users_label">Users</string>
    <string name="concentrate_label">Concentrate</string>
    <string name="roughage_label">Roughage</string>
    <string name="supplier_label">Supplier</string>
    <string name="dm_label">Dry Matter:</string>
    <string name="cp_label">Crude Protein:</string>
    <string name="me_label">Metabolizable Energy:</string>
    <string name="ca_label">Calcium:</string>
    <string name="p_label">Phosphorus:</string>
    <string name="tdn_label">Total Digestible Nutrient:</string>
    <string name="price_label">Price:</string>
    <string name="avsupply_label">Available Supply:</string>
    <string name="add_btn">Add</string>
    <string name="sub_btn">Minus</string>
    <string name="edit_btn">Edit</string>
    <string name="del_btn">Delete</string>
    <string-array name="listView_entries"></string-array>
    <string name="action_logout">Logout</string>
    <string name="optimize">Optimize</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="ingredient_label">Ingredient Name</string>
    <string name="type_label">Ingredient Type:</string>
    <string name="supply_label">Supply:</string>
    <string name="ingredients">Ingredients</string>
    <string-array name="ing_types">
        <item>Additive</item>
        <item>Concentrate</item>
        <item>Roughage</item>
    </string-array>
    <string name="amount">Amount: </string>
    <string name="total_cost">Total Cost: </string>
    <string name="total_cost_per_head">Total Cost Per Head:</string>
    <string name="total_animals">Inventory Capacity:</string>
    <string name="cost">Cost</string>
    <string name="mod_amount">Modify Supply: </string>
    <string name="save">Save</string>
    <string name="compare">Compare</string>
    <string name="btn_upload">Choose Image</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="recipe_label">Recipe Name</string>
    <string name="animal_label">Animal: </string>
    <string name="animal_type">Animal Type: </string>
    <string name="animal_criteria">Criteria: </string>
    <string name="dm_req">Dry Matter Req: </string>
    <string name="cp_req">Crude Protein Req: </string>
    <string name="me_req">Metabolizable Energy Req: </string>
    <string name="ca_req">Calcium Req: </string>
    <string name="p_req">Phosphorus Req: </string>
    <string name="animal_weight">Animal Weight:</string>
    <string-array name="animal_types">
        <item>Poultry</item>
        <item>Swine</item>
        <item>Ruminants</item>
    </string-array>
    <string-array name="poultry_types">
        <item>Broiler</item>
        <item>Egg-type</item>
    </string-array>
    <string-array name="broiler_egg_types">
        <item>Booster</item>
        <item>Starter</item>
        <item>Finisher</item>
        <item>Breeder</item>
    </string-array>
    <string-array name="swine_types">
        <item>Meat Type</item>
    </string-array>
    <string-array name="meat_types">
        <item>Starter</item>
        <item>Grower</item>
        <item>Finisher</item>
        <item>Gestating of Pregnant</item>
        <item>Lactating</item>
    </string-array>
    <string-array name="ruminants_type">
        <item>Beef-type</item>
        <item>Dairy-type</item>
    </string-array>
    <string-array name="beef_dairy_types">
        <item>Calves</item>
        <item>Growers</item>
        <item>Pregnant</item>
        <item>Lactating</item>
        <item>Bulls</item>
    </string-array>
    <string-array name="all_animal_types">
        <item>[P] Broiler</item>
        <item>[P] Egg-type</item>
        <item>[S] Meat-type</item>
        <item>[R] Beef-type</item>
        <item>[R] Dairy-type</item>
    </string-array>
    <string name="signup_farm">Sign up for new farm/supplier</string>
    <string name="choose_farm">Choose Farm/Supplier:</string>
    <string name="farm_details">Farm/Supplier Details:</string>
    <string name="admin_details">Admin Details:</string>
    <string name="farm_name">Farm/Supplier Name</string>
    <string name="contact_no_hint">Contact Number (09#########)</string>
    <string name="farm_password">Farm Password</string>
    <string name="edit_supply">Edit Supply</string>
    <string name="edit_all">Edit All</string>
    <string name="edit_ing">Edit Ingredient</string>
    <string name="transactions">Transactions</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="nutri_req">Nutritional Requirements:</string>
    <string name="amount_kg">Amount</string>
    <string name="per_head">per head(kg)</string>
    <string name="cost_php">Cost(Php)</string>
    <string name="use_output">Use Formulated Output</string>
    <string name="milk_production">Milk Production</string>
    <string name="predict">Predict</string>
    <string name="input_values">Input Values</string>
    <string name="lactation_days">Lactation Days:</string>
    <string name="fats_yield">Fats Yield:</string>
    <string name="protein_yield">Protein Yield:</string>
    <string name="total_solids_yield">Total Solids Yield:</string>
    <string name="milk_yield">Milk Yield:</string>
    <string name="predicted_label">Predicted Milk Yield:</string>
    <string name="r_squared_label">Predicted output is </string>
    <string name="correct_label">correct.</string>
    <string name="animal_name">Animal Name</string>
    <string name="total_cost_per_formulate">Total Cost Per Formulation:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">User</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_login1">Sign in</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_supplier">SupplierActivity</string>
    <string name="title_activity_optimizer_menu">OptimizerMenuActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
