<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.redfoxoptimaiii.farmaide.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/avatar"
        android:layout_alignBottom="@+id/app_title"
        android:layout_alignRight="@+id/app_title"
        android:layout_alignEnd="@+id/app_title"
        android:layout_marginBottom="50dp"
        android:id="@+id/imageView2"
        android:layout_alignLeft="@+id/app_title"
        android:layout_alignStart="@+id/app_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/editText_username"
        android:hint="@string/input_username"
        android:textColorLink="@color/colorAccent"
        android:textAlignment="viewStart"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textView_login"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:hint="@string/input_password"
        android:textColorLink="@color/colorAccent"
        android:textAlignment="viewStart"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/black"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/editText_username"
        android:layout_alignLeft="@+id/editText_username"
        android:layout_alignStart="@+id/editText_username"
        android:fontFamily="sans-serif" />

    <Button
        android:text="@string/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_user"
        android:layout_alignBaseline="@+id/button_admin"
        android:layout_alignBottom="@+id/button_admin"
        android:layout_toRightOf="@+id/textView_login"
        android:layout_toEndOf="@+id/textView_login"
        android:onClick="loginUser" />


    <Button
        android:text="@string/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_admin"
        android:textColor="@android:color/black"
        android:elevation="0dp"
        android:layout_marginTop="21dp"
        android:onClick="loginAdmin"
        android:layout_below="@+id/editText_password"
        android:layout_toLeftOf="@+id/textView_login"
        android:layout_toStartOf="@+id/textView_login" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="166dp"
        android:id="@+id/app_title"
        tools:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/app_subname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_subtitle"
        tools:text="@string/app_subname"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:gravity="center_horizontal"
        android:layout_centerInParent="false"
        android:width="300dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/login_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_login"
        tools:text="@string/login_as"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/app_subtitle"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
