<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.redfoxoptimaiii.farmaide.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/avatar"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/app_title"
        android:layout_alignEnd="@+id/app_title"
        android:layout_marginTop="23dp" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        tools:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="24sp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:text="@string/app_subname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_subtitle"
        tools:text="@string/app_subname"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:gravity="center_horizontal"
        android:layout_centerInParent="false"
        android:width="300dp"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/login_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_login"
        tools:text="@string/login_as"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textColor="@android:color/black"
        android:layout_above="@+id/signup_form"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/signup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_farm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView_login"
                android:layout_alignLeft="@+id/app_title"
                android:layout_alignStart="@+id/app_title"
                android:layout_weight="1"
                android:checked="true"
                android:text="Farm Admin" />

            <RadioButton
                android:id="@+id/radioButton_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/radioButton_farm"
                android:layout_toEndOf="@+id/textView_login"
                android:layout_toRightOf="@+id/textView_login"
                android:layout_weight="1"
                android:text="Supplier" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/signup_form"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="@string/input_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:onClick="login"
            android:text="@string/loginBtn" />

    </LinearLayout>

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="signup"
        android:text="@string/signup" />

</RelativeLayout>
