<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redfoxoptimaiii.farmaide.SupplierAddInventory">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:foregroundTintMode="multiply"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@android:drawable/ic_menu_close_clear_cancel"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/addIngredient">

            <!--<TextView-->
            <!--android:id="@+id/profile_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:text="Profile"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/appbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_add">

        <LinearLayout
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/image_picker"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageView_pic"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_weight=".8"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/btn_upload"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_ingredient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ingredient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/signup_form"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:hint="@string/ingredient_label"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:maxLines="1"
                    android:text="@string/type_label" />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/ing_types"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="8">

                <TextView
                    android:id="@+id/dm_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:maxLines="1"
                    android:text="@string/dm_label" />

                <EditText
                    android:id="@+id/editText_dm"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="%" />

                <TextView
                    android:id="@+id/cp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:maxLines="1"
                    android:text="@string/cp_label" />

                <EditText
                    android:id="@+id/editText_cp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="%" />

                <TextView
                    android:id="@+id/me_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:maxLines="1"
                    android:text="@string/me_label" />

                <EditText
                    android:id="@+id/editText_me"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:text="kcal/kg" />

                <TextView
                    android:id="@+id/ca_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:maxLines="1"
                    android:text="@string/ca_label" />

                <EditText
                    android:id="@+id/editText_ca"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="%" />

                <TextView
                    android:id="@+id/p_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:maxLines="1"
                    android:text="@string/p_label" />

                <EditText
                    android:id="@+id/editText_p"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:text="%" />

                <TextView
                    android:id="@+id/tdn_label"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:maxLines="1"
                    android:text="@string/tdn_label" />

                <EditText
                    android:id="@+id/editText_tdn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="%" />

                <TextView
                    android:id="@+id/supply_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:maxLines="1"
                    android:text="@string/supply_label" />

                <EditText
                    android:id="@+id/editText_supp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:text="kg" />

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:maxLines="1"
                    android:text="@string/price_label" />

                <EditText
                    android:id="@+id/editText_price"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="Php" />
            </GridLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:onClick="addInventory"
        android:text="@string/add_btn" />

</RelativeLayout>
